# slurm-charms

./: CONTRIBUTING.md  README.md  pyproject.toml  repository.py  test-requirements.txt
.github/workflows/: backport.yaml  ci.yaml  nightly-TICS.yaml  publish-packages.yaml
charms/sackd/: charmcraft.yaml  pyproject.toml
charms/sackd/src/: charm.py  constants.py  state.py
charms/slurmctld/: build.yaml  charmcraft.yaml  pyproject.toml
charms/slurmctld/src/: charm.py  config.py  constants.py  high_availability.py  integrations.py  mail.py  slurmctld_ops.py  state.py
charms/slurmctld/src/cos/alert_rules/prometheus/: down_nodes.rule  draining_nodes.rule  failed_nodes.rule  jobs.rules  not_responding_nodes.rule  partition.rules  scheduler.rules  unknown_nodes.rule  unreachable_slurm_database.rule
charms/slurmctld/terraform/: README.md  variables.tf
charms/slurmctld/tests/unit/: test_charm.py  test_ha.py
charms/slurmd/: build.yaml  charmcraft.yaml  pyproject.toml
charms/slurmdbd/: build.yaml  charmcraft.yaml  pyproject.toml
charms/slurmrestd/: build.yaml  charmcraft.yaml  pyproject.toml
internal/sackd-interface/: README.md  pyproject.toml
internal/slurm-ops/: pyproject.toml
internal/slurmd-interface/: README.md  pyproject.toml
internal/slurmdbd-interface/: README.md  pyproject.toml
internal/slurmrestd-interface/: README.md  pyproject.toml
pkg/slurm-oci-runtime-interface/: README.md  pyproject.toml
pkg/slurmctld-interface/: README.md  pyproject.toml
tests/integration/: conftest.py  test_charm.py  test_ha.py  test_mail.py
(+61 files in other folders)
