[project]
name = "slurmctld"
version = "0.0"
requires-python = "==3.12.*"
dependencies = [
    "ops",
    "slurmutils",
    "influxdb",
    "psutil",
    "charmed-hpc-libs[ops] >= 0.1.0",
    "charmed-slurm-slurmctld-interface",
    "charmed-slurm-oci-runtime-interface",
    "charmed-slurm-sackd-interface",
    "charmed-slurm-slurmd-interface",
    "charmed-slurm-slurmdbd-interface",
    "charmed-slurm-slurmrestd-interface",
    "charmlibs-apt",
    "cosl",
    "slurm-ops",
]

[tool.repository]
libraries = ["grafana-agent.cos_agent", "filesystem-client.mount_info", "smtp-integrator.smtp"]
